# mixdrive

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
internal-docs/: roadmap.md
internal-docs/tasks/: 0-sync-new-listens-from-spotify.md
mixdrive/: manage.py
mixdrive/mixdrive/: asgi.py  settings.py  urls.py  wsgi.py
