[tool.poetry]
name = "mixdrive"
version = "0.1.0"
description = ""
authors = ["Jonathan Lloyd <jonathan@thisisjonathan.com>"]
license = "gplv2"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
